feat: refine enterprise worker management